# resolvo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  pixi.toml
.github/chainguard/: write.sts.yaml
.github/workflows/: cpp-test.yml  enforce-sha.yaml  release-plz.yml  rust-compile.yml
cpp/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs  pixi.toml
cpp/cmake/: ResolvoConfig.cmake.in
cpp/examples/: CMakeLists.txt  README.md
cpp/examples/sudoku/: CMakeLists.txt  README.md  pixi.toml  sudoku.cpp
cpp/include/: resolvo_dependency_provider.h  resolvo_pool.h
cpp/src/: lib.rs
examples/: sudoku.rs
src/: conditional_requirement.rs  conflict.rs  id.rs  lib.rs  requirement.rs  snapshot.rs  solvable_id.rs  solver_id.rs
src/internal/: arena.rs  id.rs  indexed_set.rs  mod.rs  small_vec.rs  solver_id.rs
src/solver/: cache.rs  clause.rs  conditions.rs  decide_queue.rs  decision.rs  decision_map.rs  decision_tracker.rs  diagnostics.rs  encoding.rs  mod.rs  variable_map.rs  watch_map.rs
src/utils/: indexed_set.rs  mapping.rs  mod.rs  pool.rs
tests/solver/: decide_queue_prop.rs  hints.rs  main.rs
tests/solver/bundle_box/: mod.rs  parser.rs
tests/solver/snapshots/: solver__allow_multiple_versions__non_overlapping_requirements_unsat_without_allow_multiple.snap  solver__constrains_forward_all_forbidden.snap  solver__constrains_reverse_unsat.snap  solver__merge_installable.snap  solver__unsat_applies_graph_compression.snap  solver__unsat_constrains_shared_encoding.snap  (+3 more)
tools/solve-snapshot/: Cargo.toml  timing_comparison.ipynb
(+1 files in other folders)
